~huy/symlink: fix format. fix command to find /lib
In the arch homepage, this command shows too much information

grep "^lib/" /var/lib/pacman/local/*/files | grep -v glibc

All we need are just the packages information

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -117,3 +117,9 @@ pre.license {
   font-size: 10px;
   font-family: normal;
 }
+
+blockquote {
+  margin-left: 0.5em;
+  padding-left: 1em;
+  border-left: 1px solid gray;
+}
